# model-deployment

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  upload_model.sh
src/: runners.py  services.py
terraform/: main.tf  outputs.tf  variables.tf
