[tool.poetry]
name = "text-classification"
version = "0.1.0"
description = ""
authors = ["Tomas Gomez <tgomez2342@gmail.com>"]
readme = "README.md"
packages = [{include = "text_classification"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
